# recommend_arxiv

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: arxiv_3x100.csv  embeddings_128d_arxiv3x100.csv  gephi_3x100.gexf
src/: data.py  recommend.py  visual.py
